--- a/css/nav.css
+++ b/css/nav.css
@@ -60,7 +60,7 @@ padding: 1rem;
 .navbar-links a {
   color:black;
   background-color: grey;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:Dosis;
   font-variant: small-caps;
   font-size: 1.5rem;
   padding: .5rem .5rem;
@@ -71,7 +71,7 @@ padding: 1rem;
 .navbar-links a:hover,
 .navbar-links a:focus {
   color:steelblue;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:Dosis;
   font-variant: small-caps;
   font:bolder;
   background-color: goldenrod;
