--- a/css/nav.css
+++ b/css/nav.css
@@ -73,6 +73,7 @@ padding: 1rem;
   color:steelblue;
   font-family:Dosis;
   font-variant: small-caps;
+  font-size: 1.5rem;
   font:bolder;
   background-color: goldenrod;
   border-radius:10px;
