--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,19 @@ header {text-align: center;}
         font-size: 1.5rem;
         padding: .5rem;
         border: 1px outset darkgrey;
+        font-family:Dosis;
         font-weight: bolder;
         box-shadow: .5px .5px .5px .5px maroon;
     }
            
     /* Contact Form*/
         #formElements{
+            font-family:Dosis;
+            background-color: silver;
+            border: 5px solid maroon;
             display:grid;
             row-gap: .75em;
+            font-family:Dosis;
             font-variant: small-caps;
         }
     
@@ -231,10 +236,12 @@ header {text-align: center;}
             padding: 1.5rem;
             max-width:500px;
             margin: 1.5rem auto;
+            font-family:Dosis;
             font-variant: small-caps;
         }
 
         fieldset{
+            font-family:Dosis;
             border: 2px solid maroon;
             margin-top: 1em;
             margin-bottom: 1em;
